Filled in remaining text. Fixed some issues with image alignment and HTML overriding styles.

--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -27,6 +27,7 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;6
   text-transform: uppercase;
   position: fixed;
   top: 0;
+  bottom: auto;
   width: 100%;
 
   &-nav {
