--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -65,6 +65,7 @@ $h5-font-size:                1rem !default;
 $h6-font-size:                .75rem !default;
 $headings-font-weight:        600 !default;
 $headings-color:              $gray-900 !default;
+$font-weight-bolder:          bold;
 
 // Tables
 
